Добавила scss mobile

--- a/src/partials/programm.html
+++ b/src/partials/programm.html
@@ -1,147 +1,171 @@
 
-<section class="program__section">
+<section class="program-section">
     <div class="container">
-        <div class="program">
+        
 
-            <h2 class="program__title" >
+            <h2 class="program-title" >
                 Наша программа
             </h2>
-            <ul class="program__items">
-                <li class="program__item">
-                    <p class="program__item-title">1 семестр</p>
-                    <ul class="program__item-semester">
-                        <li class="program__item-grammar">
-                            <p class="program__item-subtitle">Grammar</p>
-                            
-                            <ul class="program__topics">
-                                <li class="program__topics-item">Nouns & Articles </li>
-                                <li class="program__topics-item">Adjectives & Adverb</li>
-                            </ul>
-                        </li>
-                        <li class="program__item-vocabulary"> 
-                            <p class="program__item-subtitle">Vocabulary</p>
-                            <ul class="program__topics">
-                                <li class="program__topics-item">Family & Relations </li>
-                                <li class="program__topics-item">People & Society</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="program__item">
-                    <p class="program__item-title">2 семестр</p>
-                    <ul class="program__item-semester">
-                        <li class="program__item-grammar">
-                            <p class="program__item-subtitle">Grammar</p>
-                            <ul class="program__topics">
-                                <li class="program__topics-item">Pronouns </li>
-                                <li class="program__topics-item">Active Voice</li>
-                                <li class="program__topics-item">Passive Voice</li>
-                            </ul>
-                        </li>
-                        <li class="program__item-vocabulary">
-                            <p class="program__item-subtitle">Vocabulary</p>
-                            <ul class="program__topics">
-                                <li class="program__topics-item"> Home</li>
-                                <li class="program__topics-item">School</li>
-                                <li class="program__topics-item">Work</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="program__item">
-                    <p class="program__item-title">3 семестр</p>
-                    <ul class="program__item-semester">
-                        <li class="program__item-grammar">
-                            <p class="program__item-subtitle">Grammar</p>
-                            <ul class="program__topics">
-                                <li class="program__topics-item"> Home</li>
-                                <li class="program__topics-item">School</li>
-                                <li class="program__topics-item">Work</li>
-                                <li class="program__topics-item">Participle: 1, 2</li> 
-                            </ul>
-                        </li>
-                        <li class="program__item-vocabulary">
-                            <p class="program__item-subtitle">Vocabulary</p>
-                            <ul class="program__topics">
-                                <li class="program__topics-item">Travel & Tourism</li>
-                                <li class="program__topics-item">Culture & Free Time</li>
-                                <li class="program__topics-item">Sport</li>
-                            </ul>
-                        </li>
-                        <li class="program__item-writing">
-                            <p class="program__item-subtitle">Writing</p>
-                            <ul class="program__topics">
-                                <li class="program__topics-item">Informal Letter</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="program__item">
-                    <p class="program__item-title">4 семестр</p>
-                    <ul class="program__item-semester">
-                        <li class="program__item-grammar">
-                            <p class="program__item-subtitle">Grammar</p>
-                            <ul class="program__topics">
-                                <li class="program__topics-item">Clauses: Conditional and Wishes</li>
-                                <li class="program__topics-item">Direct / Reported speech</li>
-                                <li class="program__topics-item">Preposition</li>
-                                <li class="program__topics-item">Conjunction</li> 
-                                <li class="program__topics-item">Numeral</li>
-                            </ul>
-                        </li>
-                        <li class="program__item-vocabulary">
-                            <p class="program__item-subtitle">Vocabulary</p>
-                            <ul class="program__topics">
-                                <li class="program__topics-item">Healthy Living</li>
-                                <li class="program__topics-item">Nature & Environment</li>
-                                <li class="program__topics-item">Money</li>
-                            </ul>
-                        </li>
-                        <li class="program__item-writing">
-                            <p class="program__item-subtitle">Writing</p>
-                            <ul class="program__topics">
-                                <li class="program__topics-item">Formal Letter</li>
-                            </ul>
-                        </li>
-                    </ul>
-                </li>
-                <li class="program__item">
-                    <p class="program__item-title">5 семестр</p>
-                    <ul class="program__item-results">
-                        <li class="program__topics-item">Revision</li>
-                        <li class="program__topics-item">Tests</li>
-                    </ul>
-                </li>
-            </ul>
-        </div>
-        <div class="program__dignity">
-            <h3 class="program__subtitle">
+            <div class="program">
+                <ul class="program-items">
+                    <li class="program-item">
+                        <p class="program-item-title">1 семестр</p>
+                        <ul class="program-item-semester">
+                            <li class="program-item-grammar">
+                                <p class="program-item-subtitle">Grammar</p>
+                                
+                                <ul class="program-topics">
+                                    <li class="program-topics-item">Nouns & Articles </li>
+                                    <li class="program-topics-item">Adjectives & Adverb</li>
+                                </ul>
+                            </li>
+                            <li class="program-item-vocabulary"> 
+                                <p class="program-item-subtitle">Vocabulary</p>
+                                <ul class="program-topics">
+                                    <li class="program-topics-item">Family & Relations </li>
+                                    <li class="program-topics-item">People & Society</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="program-item">
+                        <p class="program-item-title">2 семестр</p>
+                        <ul class="program-item-semester">
+                            <li class="program-item-grammar">
+                                <p class="program-item-subtitle">Grammar</p>
+                                <ul class="program-topics">
+                                    <li class="program-topics-item">Pronouns </li>
+                                    <li class="program-topics-item">Active Voice</li>
+                                    <li class="program-topics-item">Passive Voice</li>
+                                </ul>
+                            </li>
+                            <li class="program-item-vocabulary">
+                                <p class="program-item-subtitle">Vocabulary</p>
+                                <ul class="program-topics">
+                                    <li class="program-topics-item"> Home</li>
+                                    <li class="program-topics-item">School</li>
+                                    <li class="program-topics-item">Work</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="program-item">
+                        <p class="program-item-title">3 семестр</p>
+                        <ul class="program-item-semester">
+                            <li class="program-item-grammar">
+                                <p class="program-item-subtitle">Grammar</p>
+                                <ul class="program-topics">
+                                    <li class="program-topics-item"> Home</li>
+                                    <li class="program-topics-item">School</li>
+                                    <li class="program-topics-item">Work</li>
+                                    <li class="program-topics-item">Participle: 1, 2</li> 
+                                </ul>
+                            </li>
+                            <li class="program-item-vocabulary">
+                                <p class="program-item-subtitle">Vocabulary</p>
+                                <ul class="program-topics">
+                                    <li class="program-topics-item">Travel & Tourism</li>
+                                    <li class="program-topics-item">Culture & Free Time</li>
+                                    <li class="program-topics-item">Sport</li>
+                                </ul>
+                            </li>
+                            <li class="program-item-writing">
+                                <p class="program-item-subtitle">Writing</p>
+                                <ul class="program-topics">
+                                    <li class="program-topics-item">Informal Letter</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="program-item">
+                        <p class="program-item-title">4 семестр</p>
+                        <ul class="program-item-semester">
+                            <li class="program-item-grammar">
+                                <p class="program-item-subtitle">Grammar</p>
+                                <ul class="program-topics">
+                                    <li class="program-topics-item">Clauses: Conditional and Wishes</li>
+                                    <li class="program-topics-item">Direct / Reported speech</li>
+                                    <li class="program-topics-item">Preposition</li>
+                                    <li class="program-topics-item">Conjunction</li> 
+                                    <li class="program-topics-item">Numeral</li>
+                                </ul>
+                            </li>
+                            <li class="program-item-vocabulary">
+                                <p class="program-item-subtitle">Vocabulary</p>
+                                <ul class="program-topics">
+                                    <li class="program-topics-item">Healthy Living</li>
+                                    <li class="program-topics-item">Nature & Environment</li>
+                                    <li class="program-topics-item">Money</li>
+                                </ul>
+                            </li>
+                            <li class="program-item-writing">
+                                <p class="program-item-subtitle">Writing</p>
+                                <ul class="program-topics">
+                                    <li class="program-topics-item">Formal Letter</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="program-item">
+                        <p class="program-item-title">5 семестр</p>
+                        <ul class="program-item-results">
+                            <p class="program-item-subtitle last"></p>
+                            <li class="program-topics-item">Revision</li>
+                            <li class="program-topics-item">Tests</li>
+                        </ul>
+                    </li>
+                </ul>
+                <picture class="program-list-picture">
+                    <source
+                        srcset="./images/programm-desk.jpg 1x, ./images/programm-desk@2x.jpg 2x"
+                        media="(min-width: 1200px)" type="image/webp">
+                    <source
+                        srcset="./images/programm-desk.jpg 1x, ./images/programm-desk@2x.jpg 2x"
+                        media="(min-width: 1200px)">
+                    <source
+                        srcset="./images/programm-tablet.jpg 1x, ./images/programm-tablet@2x.jpg 2x"
+                        media="(min-width: 768px)" type="image/webp">
+                    <source
+                        srcset="./images/programm-tablet.jpg 1x, ./images/programm-tablet@2x.jpg 2x"
+                        media="(min-width: 768px)">
+                    <source
+                        srcset="./images/programm-mobile.jpg 1x, ./images/programm-mobile@2x.jpg 2x"
+                        media="(min-width: 320px)" type="image/webp">
+                    <source
+                        srcset="./images/programm-mobile.jpg 1x, ./images/programm-mobile@2x.jpg 2x"
+                        media="(min-width: 320px)">
+                    <img class="program-list-img" src="./images/programm-mobile.jpg"
+                        alt="предподаватель проводит занятие" />
+                </picture>
+            </div>
+        <div class="program-dignity">
+            <h3 class="program-subtitle">
                 Почему нас выбирают
             </h3>
-            <ul class="program__dignity-items">
-                <li class="program__dignity-item"> 
-                    <p class="program__dignity-number">01</p> 
-                    <p class="program__dignity-text">Обучение в малых командах</p>
+            <ul class="program-dignity-items">
+                <li class="program-dignity-item"> 
+                    <p class="program-dignity-number">01</p> 
+                    <p class="program-dignity-text">Обучение в малых командах</p>
                 </li>
-                <li class="program__dignity-item"> 
-                    <p class="program__dignity-number">02</p> 
-                    <p class="program__dignity-text">Визуализированные конспекты</p>
+                <li class="program-dignity-item"> 
+                    <p class="program-dignity-number">02</p> 
+                    <p class="program-dignity-text">Визуализированные конспекты</p>
                 </li>
-                <li class="program__dignity-item"> 
-                    <p class="program__dignity-number">03</p>  
-                    <p class="program__dignity-text">Каждое занятие имеет цель и конкретный результат</p>
+                <li class="program-dignity-item"> 
+                    <p class="program-dignity-number">03</p>  
+                    <p class="program-dignity-text">Каждое занятие имеет цель и конкретный результат</p>
                 </li>
-                <li class="program__dignity-item"> 
-                    <p class="program__dignity-number">04</p>  
-                    <p class="program__dignity-text">Ревльные результаты преподавателя</p>
+                <li class="program-dignity-item"> 
+                    <p class="program-dignity-number">04</p>  
+                    <p class="program-dignity-text">Ревльные результаты преподавателя</p>
                 </li>
-                <li class="program__dignity-item"> 
-                    <p class="program__dignity-number">05</p>  
-                    <p class="program__dignity-text"> Прогамма курса соответствует требованиям МОН Украины</p>
+                <li class="program-dignity-item"> 
+                    <p class="program-dignity-number">05</p>  
+                    <p class="program-dignity-text"> Прогамма курса соответствует требованиям МОН Украины</p>
                 </li>
-                <li class="program__dignity-item"> 
-                    <p class="program__dignity-number">06</p>  
-                    <p class="program__dignity-text">Набор команд по уровням знаний</p>
+                <li class="program-dignity-item"> 
+                    <p class="program-dignity-number">06</p>  
+                    <p class="program-dignity-text">Набор команд по уровням знаний</p>
                 </li>
             </ul>
         </div>
