--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -36,7 +36,7 @@
 }
 
 body {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 h1,
@@ -77,17 +77,20 @@ a {
   padding: 0 16px;
   margin: 0 auto;
 }
+
 @media screen and (min-width: 320px) {
   .container {
     max-width: 320px;
   }
 }
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 768px;
     padding: 0 38px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1386px;
@@ -105,101 +108,79 @@ a {
   }
 }
 
-.program__section {
-  background: var(--b-dark);
-  padding-top: 50px;
-  position: relative;
+.header-nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-.program__section .container {
-  padding-bottom: 537px;
-  position: relative;
-}
-
-.program__title {
+.logo {
   font-weight: 800;
-  font-size: 20px;
-  line-height: 1.3;
-  letter-spacing: 0.03em;
-  color: var(--txt-light);
-  text-align: center;
-}
-
-.program__items {
-  margin-bottom: 50px;
-}
-
-.program__item-title {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 2;
-  letter-spacing: 0.08em;
-  color: var(--txt-light);
-}
-
-.program__item {
-  padding-left: 120px;
-}
-
-.program__item:not(:last-child) {
-  margin-bottom: 40px;
-}
-
-.program__item-subtitle {
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 1.169;
-  letter-spacing: 0.08em;
-  color: var(--txt-orange);
-  text-align: center;
-}
-
-.program__topics-item {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.667;
-  letter-spacing: 0.08em;
-  color: var(--txt-light);
-  opacity: 0.5;
-}
-
-.program__subtitle {
-  font-weight: 800;
-  font-size: 20px;
-  line-height: 1.36;
-  letter-spacing: 0.03em;
-  color: var(--txt-light);
-  width: 180px;
-  text-align: left;
-  margin-bottom: 50px;
-}
-
-.program__dignity-number {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.649;
-  letter-spacing: 0.08em;
-  color: var(--txt-orange);
-}
-
-.program__dignity-text {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.429;
-  letter-spacing: 0.08em;
+  font-size: 17px;
+  line-height: 1.235;
+  letter-spacing: 0.04em;
   color: var(--txt-dark);
 }
 
-.program__dignity-items {
-  background: #FFFFFF;
-  -webkit-box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-          box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
-  position: absolute;
-  width: 280px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+.logo-description {
+  font-weight: 700;
+  font-size: 5px;
+  line-height: 1.2;
+  letter-spacing: 0.21em;
+  color: var(--txt-dark);
 }
+
+.header-nav-link {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  color: gray;
+}
+
+.header-nav-link:hover,
+.header-nav-link:focus {
+  color: var(--txt-orange);
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  margin: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.icon-menu {
+  stroke: black;
+}
+
 .advantages-item {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -233,11 +214,11 @@ a {
     padding-left: 52px;
     padding-right: 52px;
   }
-
   .advantages-item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
+
 @media screen and (min-width: 768px) {
   .advantages-list {
     display: -webkit-box;
@@ -248,20 +229,20 @@ a {
             justify-content: center;
   }
 }
+
 @media screen and (min-width: 768px) and (max-width: 1200px) {
   .advantages-item:not(:last-child) {
     margin-right: 21px;
   }
 }
+
 @media screen and (min-width: 1200px) {
   .advantages-icon {
     display: none;
   }
-
   .advantages-icon-desk {
     display: block;
   }
-
   .advantages-text {
     font-weight: 700;
     font-size: 20px;
@@ -269,14 +250,417 @@ a {
     letter-spacing: 0.08em;
     width: 100%;
   }
-
   .advantages-icon-desk {
     margin-right: -15px;
   }
 }
+
+.problems-container {
+  width: 320px;
+  height: 545px;
+  background-color: var(--b-dark);
+}
+
+.problems-title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.36;
+  letter-spacing: 0.03em;
+  color: var(--txt-light);
+}
+
+.problems-word-color {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.36;
+  letter-spacing: 0.03em;
+  color: var(---txt-orange);
+}
+
+.problems-block-white {
+  width: 280px;
+  height: 488px;
+  background-color: var(--txt-light);
+  -webkit-box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+          box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  z-index: 1;
+}
+
+.problems-number {
+  width: 215px;
+  height: 24px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+  color: var(---txt-orange);
+}
+
+.problems-text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 215px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.714;
+  letter-spacing: 0.08em;
+  color: var(--txt-dark);
+}
+
+.doings {
+  padding: 0 20px;
+  text-align: center;
+}
+
+.doings-title {
+  padding-bottom: 30px;
+  color: var(--txt-dark);
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+}
+
+.doings-item {
+  height: 280px;
+  background: var(--b-white);
+  -webkit-box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 8px 26px rgba(0, 0, 0, 0.1);
+  margin-bottom: 15px;
+}
+
+.doings-item:last-child {
+  margin-bottom: 0;
+}
+
+.doings-item:hover,
+.doings-item:focus {
+  background-color: var(--b-accent-background);
+  color: var(--txt-light);
+}
+
+.doings-item:hover .doings-svg,
+.doings-item:focus .doings-svg {
+  fill: var(--white);
+}
+
+.doings-item:hover .doings-description,
+.doings-item:focus .doings-description {
+  color: var(--txt-light);
+}
+
+.doings-item:hover .doings-list-title::after,
+.doings-item:focus .doings-list-title::after {
+  background-color: var(--b-white);
+}
+
+.doings-list-title {
+  position: relative;
+  text-align: center;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.428;
+  letter-spacing: 0.08em;
+  padding: 0 9px 42px;
+}
+
+.doings-list-title::after {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 2px;
+  bottom: 21px;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  background-color: var(--b-accent-background);
+}
+
+.doings-description {
+  padding-bottom: 22px;
+  color: var(--txt-grey);
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.666;
+  letter-spacing: 0.08em;
+  padding: 0 7px;
+}
+
+.doings-svg {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  fill: var(--light);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .doings-title {
+    font-weight: 800;
+    font-size: 26px;
+    line-height: 1.3;
+    letter-spacing: 0.03em;
+  }
+  .doings-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .doings-item:nth-child(2n + 1) {
+    margin-right: 20px;
+  }
+  .doings-item {
+    margin-bottom: 27px;
+    width: 334px;
+    height: 334px;
+  }
+  .doings-item:nth-last-child(-n + 2) {
+    margin-bottom: 0;
+  }
+  .doings-svg {
+    margin-top: 40px;
+    margin-bottom: 30px;
+  }
+  .doings-list-title {
+    padding: 0 26px 52px;
+  }
+  .doings-list-title::after {
+    bottom: 26px;
+    left: 50%;
+    -webkit-transform: translate(-50%);
+            transform: translate(-50%);
+  }
+  .doings-description {
+    padding: 0 22px;
+  }
+}
+
+.program-section {
+  background: var(--b-dark);
+  padding-top: 50px;
+  position: relative;
+}
+
+.program-section .container {
+  padding-bottom: 405px;
+  position: relative;
+}
+
+.program-title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  color: var(--txt-light);
+  text-align: center;
+  margin-bottom: 43px;
+}
+
+.program-items {
+  margin-bottom: 50px;
+}
+
+.program-item-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 2;
+  letter-spacing: 0.08em;
+  color: var(--txt-light);
+  margin-bottom: 11px;
+}
+
+.program-item {
+  padding-left: 80px;
+}
+
+.program-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.program-item-subtitle {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.169;
+  letter-spacing: 0.08em;
+  color: var(--txt-orange);
+  padding-left: 52px;
+  padding-bottom: 9px;
+  padding-top: 9px;
+  margin-bottom: 8px;
+  position: relative;
+}
+
+.program-item-subtitle::before {
+  content: "";
+  position: absolute;
+  width: 12px;
+  height: 1px;
+  bottom: 50%;
+  left: 40px;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  background-color: var(--b-accent-background);
+}
+
+.program-item-title::before {
+  display: inline-block;
+  content: "";
+  position: relative;
+  margin-right: 20px;
+  padding: 6px;
+  border: 1px solid #FF6B09;
+  background: #FF6B09;
+  border-radius: 50%;
+}
+
+.program-items:not(:last-child)::before {
+  content: '';
+  position: absolute;
+  top: 86px;
+  left: 32%;
+  width: 1px;
+  height: 64%;
+  background: #ffffff;
+}
+
+.program-topics-item {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.667;
+  letter-spacing: 0.08em;
+  color: var(--txt-light);
+  opacity: 0.5;
+  padding-left: 32px;
+}
+
+.program-item-grammar,
+.program-item-vocabulary {
+  margin-bottom: 8px;
+}
+
+.program-item-subtitle.last {
+  margin-bottom: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+}
+
+.program-list-img {
+  display: inline-block;
+  position: absolute;
+  top: 72%;
+  right: 0;
+  opacity: 0.5;
+}
+
+.program-subtitle {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.36;
+  letter-spacing: 0.03em;
+  color: var(--txt-light);
+  width: 180px;
+  text-align: left;
+  margin-bottom: 30px;
+}
+
+.program-dignity-number {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.649;
+  letter-spacing: 0.08em;
+  color: var(--txt-orange);
+  position: relative;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+.program-dignity-number::before {
+  content: "";
+  position: absolute;
+  width: 15px;
+  height: 2px;
+  bottom: 50%;
+  left: -12px;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  background-color: var(--b-accent-background);
+}
+
+.program-dignity-text {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.429;
+  letter-spacing: 0.08em;
+  color: var(--txt-dark);
+}
+
+.program-dignity-items {
+  background: #FFFFFF;
+  -webkit-box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+          box-shadow: -5px 8px 26px rgba(0, 0, 0, 0.04);
+  position: absolute;
+  min-width: 280px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 20px 30px;
+}
+
+.program-dignity-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.program-dignity {
+  position: relative;
+}
+
+.teacher-main-title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.3;
+  letter-spacing: 0.03em;
+  color: var(--txt-dark);
+  margin-bottom: 20px;
+  padding: 5px 0;
+}
+
+.teacher-title {
+  font-weight: 800;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.08em;
+  color: var(--txt-dark);
+  margin-bottom: 10px;
+  padding: 5px 0;
+}
+
+.teacher-picture {
+  margin-bottom: 20px;
+}
+
+.teacher-list::before {
+  position: absolute;
+  content: "";
+  width: 280px;
+  height: 0;
+  border: 1px solid var(--txt-grey);
+}
+
 .warranty {
   background-color: var(--b-middle);
 }
+
 .warranty-title {
   font-weight: 800;
   font-size: 26px;
@@ -286,11 +670,13 @@ a {
   text-align: center;
   margin-bottom: 30px;
 }
+
 .warranty-list {
   padding: 30px 20px;
   width: 320px;
   margin: auto;
 }
+
 .warranty-item {
   font-weight: 500;
   font-size: 12px;
@@ -299,9 +685,11 @@ a {
   color: var(--txt-dark);
   text-align: start;
 }
+
 .warranty-item:not(:last-child) {
   margin-bottom: 23px;
 }
+
 .warranty .orange-text {
   color: var(--txt-orange);
 }
@@ -317,6 +705,7 @@ a {
     max-width: 100%;
   }
 }
+
 @media screen and (min-width: 768px) {
   .warranty-list {
     width: 688px;
@@ -327,15 +716,18 @@ a {
     margin-bottom: 20px;
   }
 }
+
 .feedback.section {
   padding: 50px 20px;
 }
+
 .feedback-content {
   -webkit-box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
           box-shadow: -5px 21px 26px rgba(0, 0, 0, 0.04);
   padding: 20px 20px 30px 20px;
   margin-bottom: 20px;
 }
+
 .feedback-title {
   font-weight: 800;
   font-size: 19px;
@@ -344,6 +736,7 @@ a {
   text-align: center;
   margin-bottom: 20px;
 }
+
 .feedback-picture {
   width: 90px;
   height: 90px;
@@ -352,6 +745,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
 }
+
 .feedback-icon {
   width: 20px;
   height: 20px;
@@ -361,6 +755,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
 }
+
 .feedback-username {
   font-weight: 800;
   font-size: 14px;
@@ -370,6 +765,7 @@ a {
   color: var(--txt-orange);
   margin-bottom: 10px;
 }
+
 .feedback-text-light {
   font-weight: 500;
   font-size: 12px;
@@ -379,6 +775,7 @@ a {
   color: var(--txt-grey);
   margin-bottom: 10px;
 }
+
 .feedback-text {
   font-weight: 500;
   font-size: 12px;
@@ -388,6 +785,7 @@ a {
   color: #3d3d3d;
   margin-bottom: 10px;
 }
+
 .feedback-text-orange {
   font-weight: 500;
   font-size: 12px;
@@ -397,6 +795,7 @@ a {
   color: var(--txt-orange);
   text-decoration: underline;
 }
+
 .feedback-gallery {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -408,6 +807,7 @@ a {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
+
 .feedback-gallery-list {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -417,10 +817,12 @@ a {
       -ms-flex-direction: row;
           flex-direction: row;
 }
+
 .feedback-arrow {
   width: 25px;
   height: 13px;
 }
+
 .feedback-gallery-icon {
   width: 54px;
 }
@@ -434,15 +836,14 @@ a {
     margin-right: 10px;
   }
 }
+
 @media screen and (min-width: 768px) {
   br {
     display: none;
   }
-
   .hide-pic {
     display: block;
   }
-
   .feedback.section {
     padding: 50px 20px;
   }
@@ -461,6 +862,7 @@ a {
     text-align: start;
   }
 }
+
 .request-form {
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(17, 21, 24, 0.7)), to(rgba(17, 21, 24, 0.7))), url(../images/footer-mobile.jpg);
   background-image: linear-gradient(rgba(17, 21, 24, 0.7), rgba(17, 21, 24, 0.7)), url(../images/footer-mobile.jpg);
@@ -471,6 +873,7 @@ a {
   height: 507px;
   padding: 50px 20px;
 }
+
 .request-title {
   font-weight: 800;
   font-size: 14px;
@@ -480,9 +883,11 @@ a {
   text-align: center;
   margin-bottom: 30px;
 }
+
 .request-title .orange-text {
   color: var(--txt-orange);
 }
+
 .request-invite {
   font-weight: 600;
   font-size: 12px;
@@ -492,6 +897,7 @@ a {
   text-align: center;
   margin-bottom: 30px;
 }
+
 .request-invite .orange-text {
   color: var(--txt-orange);
 }
@@ -512,6 +918,7 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+
 .footer-black {
   height: 70px;
   background-color: var(--b-dark);
@@ -525,6 +932,7 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
 }
+
 .footer-text {
   font-weight: 500;
   font-size: 14px;
@@ -538,6 +946,7 @@ a {
   height: 20px;
   margin-right: 10px;
 }
+
 .phone-number {
   font-weight: 600;
   font-size: 14px;
@@ -545,6 +954,7 @@ a {
   letter-spacing: 0.08em;
   color: var(--txt-dark);
 }
+
 .phone-groupe {
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -553,4 +963,5 @@ a {
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 30px;
-}/*# sourceMappingURL=main.css.map */
+}
+/*# sourceMappingURL=main.css.map */
