--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -47,7 +47,6 @@
   align-items: center;
   color: inherit;
   @extend %link;
-  // vertical-align: middle;
 }
 
 .legal__icon {
@@ -99,4 +98,38 @@
   &:hover {
     background-color: $color-red;
   }
+}
+
+.footer-call {
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 1.86;
+  text-align: right;
+  margin-bottom: 43px;
+}
+
+.footer-call__link {
+  text-decoration: none;
+  color: $color-red;
+}
+
+.footer__container.line {
+  border-bottom: 1px solid #E1E1E1;
+}
+
+.copyright {
+  padding: 22px 0 25px 0;
+  @media screen and (max-width: 575px) {
+    max-width: 150px;
+  }
+}
+
+.copyright__text {
+  margin: 0;
+  text-align: center;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.5;
+  text-align: center;
+  color: $color-gray;
 }
