--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,27 +1,27 @@
 <footer class="footer">
-  <div class="footer__container">
+  <div class="footer__container line">
     <div class="legal">
-      <ul class="legal__list">
-        <li class="legal__item">
-          <a class="legal__link" href="">Our Locations
-            <svg class="legal__icon" width="4" height="8">
-              <use href="../src/images/sprite.svg#right"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="legal__item light">
-          <a class="legal__link" href="">Franchise
-            <svg class="legal__icon" width="8" height="12">
-              <use href="../src/images/sprite.svg#right"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
-    </div>
-    <div class="footer__title">
-      <span class="footer__accent">homemade ice cream made</span>
-      <h2 class="footer__name">with passion</h2>
-    </div>
+        <ul class="legal__list">
+          <li class="legal__item">
+            <a class="legal__link" href="">Our Locations
+              <svg class="legal__icon" width="4" height="8">
+                <use href="../src/images/sprite.svg#right"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="legal__item light">
+            <a class="legal__link" href="">Franchise
+              <svg class="legal__icon" width="8" height="12">
+                <use href="../src/images/sprite.svg#right"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer__title">
+        <span class="footer__accent">homemade ice cream made</span>
+        <h2 class="footer__name">with passion</h2>
+      </div>
       <ul class="nets__list">
         <li class="nets__item github">
           <a class="nets__link" href="github">
@@ -32,23 +32,25 @@
         </li>
         <li class="nets__item telegram">
           <a class="nets__link" href="telegram">
-              <svg width="18" height="18">
-                <use href="../src/images/sprite.svg#telegram"></use>
-              </svg>
+            <svg width="18" height="18">
+              <use href="../src/images/sprite.svg#telegram"></use>
+            </svg>
           </a>
         </li>
         <li class="nets__item facebook">
           <a class="nets__link" href="facebook">
-              <svg width="18" height="18">
-                <use href="../src/images/sprite.svg#facebook"></use>
-              </svg>
+            <svg width="18" height="18">
+              <use href="../src/images/sprite.svg#facebook"></use>
+            </svg>
           </a>
         </li>
       </ul>
-    <div>
-      <b>Feel free to contact</b>
-      <a href="tel:+61(0)383766284">+61 (0) 383 766 284</a>
-    </div>
-    <p>&copy 2019 - IceCream. All Rights Reserved.</p>
+      <div class="footer-call">
+        <b>Feel free to contact</b>
+        <a class="footer-call__link" href="tel:+61(0)383766284">+61 (0) 383 766 284</a>
+      </div>
+  </div>
+  <div class="footer__container copyright">
+    <p class="copyright__text">&copy 2019 - IceCream. All Rights Reserved.</p>
   </div>
 </footer>
