--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -7,3 +7,52 @@
     @include container();
     height: 100px;
 }
+.footer-title {
+   
+    color: #ffa5ba ;
+    
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 1.18;
+    text-transform: uppercase;
+    margin-bottom: 17px;
+    margin-left: 22px;
+    justify-content: center;
+}
+
+.footer-passion {
+    color: #d41443;
+    font-weight: 400;
+    font-size: 34px;
+    line-height: 1.2;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    margin-left: 22px;
+    margin-top: 15px;
+}
+.footer-social{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    margin-left: 208px;
+}
+.footer-logo{
+    display: block;
+ position: absolute;
+color:  #907E82;
+font-weight: bold;
+font-size: 14px;
+
+text-align: center;
+
+
+}
+.footer-contact{
+    color: #d41443;
+    font-size: 14px;
+    text-align: right;
+}
