--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,28 @@
 <footer class="footer">
-    <div class="footer-container">
-        <!-- Марина -->
-        <h2>footer Marina</h2>
+  <div class="footer-container">
+    <div>
+      <h2 class="footer-title">homemade ice cream made</h2>
+      <p class="footer-passion">with passion</p>
     </div>
+    <div>
+      <ul>
+        <li class="footer-social">
+          <a href="">
+            <svg class="footer-icon">
+              <use href=""></use>
+            </svg>
+          </a>
+        </li>
+        <li></li>
+        <li></li>
+      </ul>
+      <p>
+        Feel free to contact
+        <span class="footer-contact">+61 (0) 383 766 284</span>
+      </p>
+      <div>
+        <p class="footer-logo">&copy; 2019 - IceCream. All Rights Reserved.</p>
+      </div>
+    </div>
+  </div>
 </footer>
